# QT

./: Readme.md
LoginWithDashboard/: CMakeLists.txt  Dashboard.qml  Homepage.qml  LoginForm.qml  LoginHandler.h  Main.qml  Settings.qml  TransactionModel.h  img.qrc  main.cpp  mockbackend.cpp  mockbackend.h  transaction.h
LoginWithDashboard/Components/: CustomBusyIndicator.qml  LoaderOverlay.qml  RecentTransactions.qml  StatCard.qml  Toast.qml  qmldir
LoginWithDashboard/app/: AppSettingsCpp.h  CMakeLists.txt  Dashboard.qml  Homepage.qml  LoginForm.qml  LoginHandler.cpp  Settings.qml  icon.rc  img.qrc  main.cpp  mockbackend.cpp  mockbackend.h
LoginWithDashboard/app/Components/: CustomBusyIndicator.qml  LineChartView.qml  LoaderOverlay.qml  RecentTransactions.qml  StatCard.qml
LoginWithDashboard/mock_server/: transactions.json
LoginWithDashboard/model/: CMakeLists.txt  TransactionModel.cpp  TransactionModel.h  transaction.cpp  transaction.h
LoginWithDashboard/tests/: CMakeLists.txt  testtransactionmodel.cpp  testtransactionmodel.h
